@@ -33,6 +33,7 @@ export(levene_test)
 export(mean_n)
 export(merMod_p)
 export(mic)
+export(mse)
 export(mwu)
 export(odds_to_rr)
 export(overdisp)
