@@ -1,10 +1,16 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/rmse.R
 \name{rmse}
+\alias{mse}
 \alias{rmse}
-\title{Root Mean Squared Error (RMSE)}
+\alias{rse}
+\title{Compute model quality}
 \usage{
 rmse(fit, normalized = FALSE)
+
+rse(fit)
+
+mse(fit)
 }
 \arguments{
 \item{fit}{Fitted linear model of class \code{\link{lm}},
@@ -17,10 +23,13 @@ The root mean squared error of \code{fit}; or the normalized
           root mean squared error of \code{fit} if \code{normalized = TRUE}.
 }
 \description{
-Compute root mean squared error  of fitted linear (mixed effects) models.
+Compute root mean squared error, residual standard error or
+             mean square error of fitted linear (mixed effects) models.
 }
 \note{
-The RMSE is the square root of the variance of the residuals and indicates
+\describe{
+        \item{\strong{Root Mean Square Error}}{
+        The RMSE is the square root of the variance of the residuals and indicates
         the absolute fit of the model to the data (difference between observed data
         to model's predicted values). \dQuote{RMSE can be interpreted as the standard
         deviation of the unexplained variance, and has the useful property
@@ -33,15 +42,28 @@ The RMSE is the square root of the variance of the residuals and indicates
         The normalized RMSE is the proportion of the RMSE related to the
         range of the response variable. Hence, lower values indicate
         less residual variance.
+        }
+        \item{\strong{Residual Standard Error}}{
+        The residual standard error is the square root of the residual
+        sum of squares divided by the residual degrees of freedom.
+        }
+        \item{\strong{Mean Square Error}}{
+        The mean square error is the mean of the sum of squared residuals,
+        i.e. it measures the average of the squares of the errors. Lower
+        values (closer to zero) indicate better fit.?
+        }
+      }
 }
 \examples{
 data(efc)
 fit <- lm(barthtot ~ c160age + c12hour, data = efc)
 rmse(fit)
+rse(fit)
 
 library(lme4)
 fit <- lmer(Reaction ~ Days + (Days | Subject), sleepstudy)
 rmse(fit)
+mse(fit)
 
 # normalized RMSE
 library(nlme)
@@ -56,7 +78,7 @@ rmse(fit, normalized = TRUE)
             }
 }
 \seealso{
-\code{\link{cv}} for the coefficient of variation, and
-           \code{\link{rse}} for the residual standard error.
+\code{\link{r2}} for R-squared or pseude-R-squared values, and
+           \code{\link{cv}} for the coefficient of variation.
 }
 
