@@ -2,6 +2,7 @@ Version 0.6.1
 ------------------------------------------------------------------------------
 New functions:
 * `prop()` to calculate proportion of values in a vector.
+* `mse()` to calculate the mean square error for models.
 
 Version 0.6.0
 ------------------------------------------------------------------------------
